        global object, including XMLHttpRequest and encodeURI.
    * The concept of completion contexts is now exposed to the user
      (see :h :contexts), allowing for powerful and fine-grained
      completion system customization.
    * IMPORTANT: 'laststatus' has been replaced with the "s" flag in
      'guioptions'.
    * IMPORTANT: 'showstatuslinks' is now a string option.
    * IMPORTANT: Command script files now use the *.penta file extension.
    * IMPORTANT: Plugins are now loaded from the 'plugins/'
      directory in 'runtimepath' rather than 'plugin/'.
    * IMPORTANT: 'loadplugins' is now a regexplist option rather than
      a boolean.
    * IMPORTANT: 'cdpath' and 'runtimepath' no longer treat ",,"
      specially. Use "." instead.
    * IMPORTANT: Option value quoting has changed. List options will
      no longer be split at quoted commas and the option name,
      operators, and = sign may no longer be quoted. This will break
      certain automatically-generated configuration files.
      See :help stringlist
    * IMPORTANT: 'extendedhinttags' is now a regexpmap rather than a
      string.
    * IMPORTANT: 'guioptions' default value has changed.
    * IMPORTANT: 'mapleader' is now an option rather than a :let
      variable.
    * Added "bookmarks", "diverted", and "links" to 'activate'
      option.
    * Added 'altwildmode' and <A-Tab> command-line key binding.
    * Added 'autocomplete' option for specifying which completion
      groups should be auto-completed.
    * Added 'banghist' option.
    * Added BookmarkChange, BookmarkRemove autocommands.
    * Added :cookies, 'cookies', 'cookieaccept', and 'cookielifetime'.
    * Added -keyword, -tags, -title to :delbmarks.
    * Added "passwords" and "venkman" dialogs to :dialog.
    * Added :extupdate command.
    * Replaced 'focuscontent' with 'strictfocus'.
    * Added :if/:elseif/:else/:endif conditionals.
    * Added 'passkeys' option.
    * Changed 'urlseparator' default value to '|'.