@@ -392,7 +392,6 @@ This file contains a list of all available commands, mappings and options.
     <dt><o>hinttimeout</o></dt> <dd>Timeout before automatically following a non-unique numerical hint</dd>
     <dt><o>history</o></dt> <dd>Number of Ex commands and search patterns to store in the command-line history</dd>
     <dt><o>hlsearch</o></dt> <dd>Highlight previous search pattern matches</dd>
-    <dt><o>ignorecase</o></dt> <dd>Ignore case in search patterns</dd>
     <dt><o>incsearch</o></dt> <dd>Show where the search pattern matches as it is typed</dd>
     <dt><o>insertmode</o></dt> <dd>Use Insert mode as the default for text areas</dd>
     <dt><o>jsdebugger</o></dt> <dd>Use the JavaScript debugger service for JavaScript completion</dd>
@@ -416,12 +415,12 @@ This file contains a list of all available commands, mappings and options.
     <dt><o>sanitizeshutdown</o></dt> <dd>The items to sanitize automatically at shutdown</dd>
     <dt><o>sanitizetimespan</o></dt> <dd>The default sanitizer time span</dd>
     <dt><o>scroll</o></dt> <dd>Number of lines to scroll with <k name="C-u"/> and <k name="C-d"/> commands</dd>
+    <dt><o>searchcase</o></dt> <dd>Search case matching mode</dd>
     <dt><o>shell</o></dt> <dd>Shell to use for executing <ex>:!</ex> and <ex>:run</ex> commands</dd>
     <dt><o>shellcmdflag</o></dt> <dd>Flag passed to shell when executing <ex>:!</ex> and <ex>:run</ex> commands</dd>
     <dt><o>showmode</o></dt> <dd>Show the current mode in the command line</dd>
     <dt><o>showstatuslinks</o></dt> <dd>Show the destination of the link under the cursor in the status bar</dd>
     <dt><o>showtabline</o></dt> <dd>Control when to show the tab bar of opened web pages</dd>
-    <dt><o>smartcase</o></dt> <dd>Override the <o>ignorecase</o> option if the pattern contains uppercase characters</dd>
     <dt><o>strictfocus</o></dt> <dd>Prevent scripts from focusing input elements without user intervention</dd>
     <dt><o>suggestengines</o></dt> <dd>Engine Alias which has a feature of suggest</dd>
     <dt><o>titlestring</o></dt> <dd>Change the title of the window</dd>
